--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       font-family: "Sora", sans-serif;
     }
   </style>
-    <title>A8_Gadget_Heaven</title>
+    <title>Gadget_Heaven</title>
   </head>
   <body>
     <div id="root"></div>
